--- a/ubuntu_VM.yaml
+++ b/ubuntu_VM.yaml
@@ -27,7 +27,7 @@
       esxi_hostname: vmhost01.home
       datacenter: Arakis
       datastore: vmhost01_DS01
-      state: absent
+      state: present
       wait_for_ip_address: yes
       customization:
          hostname: "{{ vm_name }}"
