--- a/blankvm.yaml
+++ b/blankvm.yaml
@@ -24,5 +24,5 @@
       esxi_hostname: vmhost03.home
       datacenter: Arakis
       datastore: vmost03_DS
-      state: present
+      state: absent
       wait_for_ip_address: no
